# mooGP

./: .gitignore  404.html  CITATION.cff  README.md  bandframework-moogp-sdk.md  exact_ogp.py  index.html  mkdocs.yml  mo_ogp  pyproject.toml  requirements.txt  xd_ogp.py
.github/workflows/: build-docs.yml  python-package.yml
00_getting_started/: index.html
01_trend_specification/: index.html
02_choosing_q/: index.html
03_measurement_noise/: index.html
04_standardization/: index.html
05_optimizer_control/: index.html
06_kernel_and_mixing_matrix/: index.html
examples/: 00_getting_started.ipynb  01_trend_specification.ipynb  02_choosing_q.ipynb  03_measurement_noise.ipynb  04_standardization.ipynb  05_optimizer_control.ipynb  06_kernel_and_mixing_matrix.ipynb  README.md  forrester_illustration.py  forrester_illustration_slow.py  getting_started.ipynb  main_borehole_example.py  nuclear_data_experiment.py  sigma_eps_demo.py
examples/nuclear_data/: all_f_index.csv  all_theta.csv
experiments/: __init__.py  benchmark_lib.py  merge_results.py  method_runner.py  plot_benchmark_boxplots.py  run.py  run_guide.md  run_one.py  run_one.sh  thread_diagnostics.py
experiments/tests/: __init__.py  test_benchmark_diagnostics.py  test_benchmark_lib.py  test_parallel_workflow.py  test_plot_benchmark_boxplots.py  test_run.py
javascripts/: mathjax.js
moogp/: datasets.py  design.py  forrester_illustration.py  forrester_illustration_slow.py  kernels.py  main_borehole_example.py  model.py  nuclear_data_experiment.py
moogp/tests/: bench_b1_b2_speedup.py  bench_b3_latent_grad.py  bench_dpotri_predict_layout.py  speed_test.py  test_analytical_gradient.py  test_b1_b2_kron_structure.py  test_b3_latent_grad.py  test_design_matrix.py  test_diag_error_structure.py  test_fast_path_optimizations.py  (+12 more)
notebooks/: Wk_clipping_test.ipynb  benchmark_grouped_boxplots.ipynb  beta_convergence.ipynb  diag_error_structure_demo.ipynb  forrester_orthogonality_trend_recovery.ipynb  forrester_sigma_eps_diagnosis_with_fast_plot_scaled.ipynb  init_phi_same_as_tf.ipynb  nuclear_data_fast_moogp.ipynb  performance_gain_make_c_star_diag.ipynb  poster_illustrations.ipynb  scaling_graph_notebook.ipynb  slow_vs_fast_full_train.ipynb  slow_vs_fast_single_nll_times.ipynb
nuclear_data/: all_f.csv
ogp/: approx_ogp.py  gp_illustration.py
results/: forrester_beta_convergence_fast_ols5000truth.csv  results.csv  run_metadata.json
results-borehole-coverage-check/: results.csv  run_metadata.json
results-borehole-q4/: results.csv  run_metadata.json
results-borehole-q4-v2/: results.csv  run_metadata.json
results-computational-complexity/: results.csv  run_metadata.json
results-lcgp/: results.csv  run_metadata.json
results-lcgp-vs-moogp/: results.csv  run_metadata.json
results-oilmm/: results.csv  run_metadata.json
results-oilmm-fixed-timing/: results.csv  run_metadata.json
results-oilmm-lcgp-only/: results.csv  run_metadata.json
results-oilmm-working/: results.csv  run_metadata.json
results-time-test/: results.csv  run_metadata.json
search/: search_index.json
(+33 files in other folders)
