[project]
name = "moogp"
authors = [
  {name = "Evan C. Barnett", email = "evanbarnett2027@u.northwestern.edu"},
  {name = "Moses Y.-H. Chan", email = "moses.chan@northwestern.edu"},
]
version = "0.9.0"
description = "Multioutput orthogonal Gaussian process"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autograd>=1.6.0",
    "numpy>=2.0.0",
    "scipy>=1.16.0",
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "ruff>=0.15.16",
    "scipy-stubs>=1.17.1.5",
]

[tool.ruff.lint]
ignore = ["E741"]