[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "moogp"
authors = [
  {name = "Evan C. Barnett", email = "evanbarnett2027@u.northwestern.edu"},
  {name = "Moses Y.-H. Chan", email = "moses.chan@northwestern.edu"},
]
version = "0.9.1"
description = "Multioutput orthogonal Gaussian process"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autograd>=1.6.0",
    "numpy>=2.0.0",
    "scipy>=1.16.0",
    "pytest>=9.0.3",
]
license = "GPL-3.0-only"
keywords = ["emulator", "gaussian process", "calibration", "statistics", "surrogate"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "ruff>=0.15.16",
    "scipy-stubs>=1.17.1.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["moogp*"]
exclude = ["moogp.tests*"]

[tool.pytest.ini_options]
testpaths = ["src/moogp/tests"]

[tool.ruff.lint]
ignore = ["E741"]
